--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,27 @@
 {
-  "name": "Getting Started Example",
+  "name": "Global Google Search",
+  "description": "Use the context menu to search a different country's Google",
   "version": "1.0",
-  "description": "Build an Extension!",
-  "permissions": ["activeTab", "declarativeContent", "storage", "contextMenus"],
+  "manifest_version": 2,
+  "options_page": "options.html",
+  "permissions": [
+      "contextMenus",
+      "storage"
+  ],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+      "scripts": [
+          "locales.js",
+          "background.js"
+      ],
+      "persistent": false
   },
-  "page_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
-    }
+  "browser_action": {
+      "default_popup": "options.html"
   },
   "icons": {
     "16": "images/get_started16.png",
     "32": "images/get_started32.png",
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
-  },
-  "options_page": "options.html",
-  "manifest_version": 2
+  }
 }
